@@ -12,6 +12,9 @@
 # monitored with this plugin.
 #
 # $Log$
+# Revision 1.8.2.5  2005/02/16 21:27:33  jimmyo
+# Added warning note in linux/if_ output.
+#
 # Revision 1.8.2.4  2005/02/16 20:59:59  jimmyo
 # Make suggest a tad less trigger happy.
 #
@@ -95,7 +98,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_args --base 1000'
 	echo 'graph_vlabel bits in (-) / out (+) per ${graph_period}'
 	echo 'graph_category network'
-	echo "graph_info This graph shows the traffic of the $INTERFACE network interface. Please note that the traffic is showed in bits per second, not bytes."
+	echo "graph_info This graph shows the traffic of the $INTERFACE network interface. Please note that the traffic is showed in bits per second, not bytes. IMPORTANT: Since the data source for this plugin use 32bit counters, this plugin is really unreliable and unsuitable for most interfaces 100Mb or more, where transmissions are expected to exceed 50Mbps. This means that this plugin is usuitable for most production environments. To avoid this problem, use the ip_ plugin instead."
 	echo 'down.label received'
         echo 'down.type COUNTER'
         echo 'down.graph no'
